objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Número</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoERP__c</fullName>
        <externalId>true</externalId>
        <label>Código ERP</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Construtora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construtora</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Type</field>
                <operation>equals</operation>
                <value>Construtora</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contas</relationshipLabel>
        <relationshipName>Contas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TipoUnidade__c</fullName>
        <label>Tipo da unidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CodigoExterno__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Usado para UBS</inlineHelpText>
        <label>Código Externo</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContaIntegrada__c</fullName>
        <formula>IF(ISBLANK(CodigoERP__c) &amp;&amp; TEXT(StatusIntegracao__c)== &apos;Integrado com Erro&apos; , &quot;Não Integrada &#128997;&quot;,
IF( NOT(ISBLANK(CodigoERP__c)) &amp;&amp; TEXT(StatusIntegracao__c)== &apos;Integrado com Sucesso&apos; , &quot;Integrada ✅&quot;, 
IF( ISBLANK(CodigoERP__c) &amp;&amp; TEXT(StatusIntegracao__c)== &apos;Pendente&apos; , &quot;Não integrado◼️&quot;,
IF( NOT(ISBLANK(CodigoERP__c)) &amp;&amp; TEXT(StatusIntegracao__c)== &apos;Pendente&apos; , &quot;Não integrado&#128260;&quot;, &quot;Ocorreu erro ao integrar ⚠️&quot; ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Não Integrada &#128997; = Tentativa de integração &apos;nova&apos; com ERP falhou.
Integrada ✅ = Integrou com sucesso.
Não integrado◼️= O registro não foi integrado com o ERP.
Não integrado&#128260;= O registro já foi integrado e esta disponivel para atualização no ERP.
Ocorreu erro ao integrar ⚠️= Tentativa de integração com o registro já integrado com ERP falhou.</inlineHelpText>
        <label>Conta Integrada?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataEntregaObra__c</fullName>
        <label>Data da entrega da obra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusIntegracao__c</fullName>
        <label>Status Integração</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusIntegracao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CriadoPeloContato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criado pelo Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contas</relationshipLabel>
        <relationshipName>Contas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuantidadeResposta__c</fullName>
        <label>Quantidade de Resposta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TentativasIntegracao__c</fullName>
        <label>Tentativas Integracao</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantidadeRespostasFinalizadas__c</fullName>
        <label>Quantidade de Respostas finalizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantidadeRespostasNaofinalizadas__c</fullName>
        <formula>QuantidadeResposta__c - QuantidadeRespostasFinalizadas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantidade Respostas não finalizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>UBS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CriadoPeloContato__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>UBS</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Todas as contas</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <validationRules>
        <fullName>testeValidacaoDescricao</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( $Setup.ByPass__c.DesativarRegrasValidacao__c ),
ISBLANK(Description),
ISPICKVAL(   StatusIntegracao__c , &apos;Integrado com sucesso&apos;)

)</errorConditionFormula>
        <errorMessage>precisa deixar preenchido descricao quando integrado</errorMessage>
    </validationRules>
</CustomObject>